<resources>
    <string name="app_name">RandomChat</string>
    <string name="splash_activity">Splash Activity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign Up</string>
    <string name="my_chats">My Chats</string>
    <string name="title_activity_chat_list_drawar">ChatListDrawarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="select_gender">Select gender</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="priority">Priority</string>
    <string name="gender">Gender</string>
    <string name="looking_for">Looking for</string>
    <string name="i_am">I am</string>
    <string name="_back"><![CDATA[<]]></string>
    <string name="image_message">Image message</string>
    <string name="enter_message">Enter Message</string>
    <string name="username">Username</string>
    <string name="nickname">Nickname</string>
    <string name="age">Age</string>
    <string name="_18">18</string>
    <string name="continue_with_email">Continue with Email</string>

    <string name="facebook_app_id">149583547038991</string>
    <string name="fb_login_protocol_scheme">fb149583547038991</string>
    <string name="random_chat">Random Chat</string>
    <string name="___">-</string>
    <string name="age_range">Age Range</string>

    <string name="app_id">ca-app-pub-3494291433648583~3403703940</string>
    <string name="ad_id">ca-app-pub-3494291433648583/9842772177</string>
    <string name="interstitial_ad_id">ca-app-pub-3494291433648583/4844229380</string>


</resources>